--- a/colab_classification_worker.ipynb
+++ b/colab_classification_worker.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "## Setup Instructions\n",
     "\n",
-    "1. **Open in Colab**: `File → Open in Colab` or upload to Google Drive\n",
-    "2. **Enable GPU**: `Runtime → Change runtime type → Hardware accelerator → GPU → T4`\n",
-    "3. **Mount Google Drive**: Run Cell 1\n",
+    "1. **Open in Colab**: `File -> Open in Colab` or upload to Google Drive\n",
+    "2. **Enable GPU**: `Runtime -> Change runtime type -> Hardware accelerator -> GPU (T4)`\n",
+    "3. **Locate Google Drive**: Run Cell 1\n",
     "4. **Install Dependencies**: Run Cell 2\n",
     "5. **Load Model**: Run Cell 3 (this may take a few minutes)\n",
     "6. **Start Worker**: Run Cell 4 - this will continuously process jobs\n",
@@ -24,12 +24,12 @@
     "- Results are written to `VideoChunking/classification_complete/`\n",
     "- Your local pipeline polls for results and continues\n",
     "\n",
-    "Keep this notebook running while processing sessions!"
+    "Keep this notebook running while processing sessions!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,22 +47,39 @@
     }
    ],
    "source": [
-    "# Cell 1: Mount Google Drive\n",
-    "from google.colab import drive\n",
+    "# Cell 1: Locate Google Drive\n",
+    "from pathlib import Path\n",
     "import os\n",
     "\n",
-    "drive.mount('/content/drive')\n",
+    "try:\n",
+    "    from google.colab import drive  # type: ignore\n",
+    "except ModuleNotFoundError:\n",
+    "    drive = None\n",
     "\n",
-    "# Create classification directories if they don't exist\n",
-    "pending_dir = '/content/drive/MyDrive/VideoChunking/classification_pending'\n",
-    "complete_dir = '/content/drive/MyDrive/VideoChunking/classification_complete'\n",
+    "drive_root_candidates = []\n",
+    "if \"drive\" in globals() and drive is not None:\n",
+    "    drive.mount(\"/content/drive\")\n",
+    "    drive_root_candidates.append(Path(\"/content/drive/MyDrive\"))\n",
+    "else:\n",
+    "    drive_root_candidates.extend([\n",
+    "        Path(r\"G:/My Drive\"),\n",
+    "        Path.home() / \"My Drive\",\n",
+    "        Path.home() / \"Google Drive\",\n",
+    "    ])\n",
+    "\n",
+    "drive_root = next((p for p in drive_root_candidates if p.exists()), None)\n",
+    "if drive_root is None:\n",
+    "    raise RuntimeError(\"Could not find your Google Drive sync folder. Update drive_root_candidates with the correct path.\")\n",
+    "\n",
+    "pending_dir = drive_root / \"VideoChunking\" / \"classification_pending\"\n",
+    "complete_dir = drive_root / \"VideoChunking\" / \"classification_complete\"\n",
     "\n",
     "os.makedirs(pending_dir, exist_ok=True)\n",
     "os.makedirs(complete_dir, exist_ok=True)\n",
     "\n",
-    "print(f\"✓ Google Drive mounted\")\n",
-    "print(f\"✓ Pending jobs: {pending_dir}\")\n",
-    "print(f\"✓ Completed jobs: {complete_dir}\")"
+    "print(f\"[OK] Google Drive folder: {drive_root}\")\n",
+    "print(f\"[OK] Pending jobs: {pending_dir}\")\n",
+    "print(f\"[OK] Completed jobs: {complete_dir}\")\n"
    ]
   },
   {
@@ -74,7 +91,7 @@
     "# Cell 2: Install Dependencies\n",
     "!pip install -q transformers torch accelerate bitsandbytes\n",
     "\n",
-    "print(\"✓ Dependencies installed\")"
+    "print(\"[OK] Dependencies installed\")"
    ]
   },
   {
@@ -82,7 +99,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# Cell 3: Load LLM Model\nimport torch\nfrom transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n\n# Model selection - Qwen2.5-3B-Instruct (fits entirely on free T4 GPU)\n# Smaller but still excellent for classification tasks\nMODEL_NAME = \"Qwen/Qwen2.5-3B-Instruct\"\n\nprint(f\"Loading model: {MODEL_NAME}\")\nprint(\"This may take 2-5 minutes on first run...\")\n\n# Configure 8-bit quantization to fit on free GPU\nquantization_config = BitsAndBytesConfig(\n    load_in_8bit=True,\n    bnb_8bit_compute_dtype=torch.float16\n)\n\n# Load tokenizer\ntokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, trust_remote_code=True)\ntokenizer.pad_token = tokenizer.eos_token\n\n# Load model with 8-bit quantization\nmodel = AutoModelForCausalLM.from_pretrained(\n    MODEL_NAME,\n    quantization_config=quantization_config,\n    device_map=\"auto\",\n    trust_remote_code=True\n)\n\n# Print memory usage\nif torch.cuda.is_available():\n    print(f\"✓ Model loaded on GPU: {model.device}\")\n    print(f\"✓ GPU memory: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\nelse:\n    print(f\"✓ Model loaded on CPU: {model.device}\")\n    print(f\"⚠ Warning: Running on CPU will be slower. Consider enabling GPU in Runtime settings.\")"
+   "source": [
+    "# Cell 3: Load LLM Model\n",
+    "import torch\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
+    "\n",
+    "# Model selection - Qwen2.5-3B-Instruct (fits entirely on free T4 GPU)\n",
+    "# Smaller but still excellent for classification tasks\n",
+    "MODEL_NAME = \"Qwen/Qwen2.5-3B-Instruct\"\n",
+    "\n",
+    "print(f\"Loading model: {MODEL_NAME}\")\n",
+    "print(\"This may take 2-5 minutes on first run...\")\n",
+    "\n",
+    "# Configure 8-bit quantization to fit on free GPU\n",
+    "quantization_config = BitsAndBytesConfig(\n",
+    "    load_in_8bit=True,\n",
+    "    bnb_8bit_compute_dtype=torch.float16\n",
+    ")\n",
+    "\n",
+    "# Load tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, trust_remote_code=True)\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
+    "# Load model with 8-bit quantization\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    MODEL_NAME,\n",
+    "    quantization_config=quantization_config,\n",
+    "    device_map=\"auto\",\n",
+    "    trust_remote_code=True\n",
+    ")\n",
+    "\n",
+    "# Print memory usage\n",
+    "if torch.cuda.is_available():\n",
+    "    print(f\"[OK] Model loaded on GPU: {model.device}\")\n",
+    "    print(f\"[INFO] GPU memory: {torch.cuda.memory_allocated() / 1024**3:.2f} GB\")\n",
+    "else:\n",
+    "    print(f\"[OK] Model loaded on CPU: {model.device}\")\n",
+    "    print(f\"[WARN] Warning: Running on CPU will be slower. Consider enabling GPU in Runtime settings.\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -269,11 +323,11 @@
     "    with open(result_file, 'w', encoding='utf-8') as f:\n",
     "        json.dump(result_data, f, indent=2, ensure_ascii=False)\n",
     "    \n",
-    "    print(f\"✓ Results written: {result_file.name}\")\n",
+    "    print(f\"[OK] Results written: {result_file.name}\")\n",
     "    print(f\"{'='*60}\\n\")\n",
     "\n",
     "\n",
-    "print(\"✓ Classification functions ready\")"
+    "print(\"[OK] Classification functions ready\")"
    ]
   },
   {
@@ -285,50 +339,41 @@
     "# Cell 5: Start Classification Worker\n",
     "import time\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "\n",
-    "print(\"🚀 Starting classification worker...\")\n",
-    "print(\"📁 Watching:\", pending_dir)\n",
-    "print(\"📤 Results to:\", complete_dir)\n",
-    "print(\"\\nPress Ctrl+C (or interrupt kernel) to stop\\n\")\n",
-    "print(\"=\"*60)\n",
+    "print(\"[START] Classification worker\")\n",
+    "print(\"[INFO] Watching:\", pending_dir)\n",
+    "print(\"[INFO] Results to:\", complete_dir)\n",
+    "print(\"\nPress Ctrl+C (or interrupt kernel) to stop\n\")\n",
+    "print(\"=\" * 60)\n",
     "\n",
-    "# Track processed jobs to avoid reprocessing\n",
     "processed_jobs = set()\n",
     "\n",
     "try:\n",
     "    while True:\n",
-    "        # Find pending jobs\n",
     "        pending_path = Path(pending_dir)\n",
     "        job_files = list(pending_path.glob(\"job_*.json\"))\n",
-    "        \n",
-    "        # Filter out already processed jobs\n",
     "        new_jobs = [f for f in job_files if f.name not in processed_jobs]\n",
-    "        \n",
+    "\n",
     "        if new_jobs:\n",
-    "            print(f\"[{datetime.now().strftime('%H:%M:%S')}] Found {len(new_jobs)} new job(s)\")\n",
-    "            \n",
+    "            print(f\"[{datetime.now():%H:%M:%S}] Found {len(new_jobs)} new job(s)\")\n",
     "            for job_file in new_jobs:\n",
     "                try:\n",
     "                    process_job(job_file)\n",
     "                    processed_jobs.add(job_file.name)\n",
-    "                    \n",
-    "                    # Delete processed job file\n",
     "                    job_file.unlink()\n",
-    "                    \n",
-    "                except Exception as e:\n",
-    "                    print(f\"❌ Error processing {job_file.name}: {e}\")\n",
+    "                except Exception as exc:\n",
+    "                    print(f\"[ERROR] Failed on {job_file.name}: {exc}\")\n",
     "                    import traceback\n",
     "                    traceback.print_exc()\n",
     "        else:\n",
-    "            # No new jobs, wait\n",
-    "            print(f\"[{datetime.now().strftime('%H:%M:%S')}] No pending jobs, waiting...\")\n",
-    "        \n",
-    "        # Sleep before next check\n",
+    "            print(f\"[{datetime.now():%H:%M:%S}] No pending jobs, waiting...\")\n",
+    "\n",
     "        time.sleep(5)\n",
     "\n",
     "except KeyboardInterrupt:\n",
-    "    print(\"\\n\\n🛑 Worker stopped by user\")\n",
-    "    print(f\"Processed {len(processed_jobs)} jobs total\")"
+    "    print(\"\n[STOP] Worker stopped by user\")\n",
+    "    print(f\"[INFO] Processed {len(processed_jobs)} jobs total\")\n"
    ]
   }
  ],
