--- a/colab_classification_worker.ipynb
+++ b/colab_classification_worker.ipynb
@@ -90,9 +90,8 @@
     "            **inputs,\n",
     "            max_new_tokens=150,\n",
     "            temperature=0.7,\n",
-    "            top_p=0.9,\n",
-    "            do_sample=True,\n",
-    "            pad_token_id=tokenizer.eos_token_id\n",
+                "            top_p=0.9,\n",
+                "            do_sample=False,\n",    "            pad_token_id=tokenizer.eos_token_id\n",
     "        )\n",
     "    \n",
     "    # Decode response\n",
